Center aligned styles for all issues page

--- a/scss/components/_soe_dm_issue.scss
+++ b/scss/components/_soe_dm_issue.scss
@@ -16,6 +16,10 @@
       margin-right: 5%;
     }
 
+    &:nth-child(3n+2) .mag-feat-article-container {
+      margin: 0 auto;
+    }
+
     &:nth-child(3n+3) .mag-feat-article-container {
       float: right;
       margin-left: 5%;
@@ -90,6 +94,19 @@
       &:nth-child(2),
       &:nth-child(5) {
         margin-right: 0;
+        clear: right;
+      }
+    }
+
+    &:nth-child(3n+2) .mag-article-container {
+      &:nth-child(2),
+      &:nth-child(5) {
+        float: left;
+      }
+
+      &:nth-child(3),
+      &:nth-child(6) {
+        float: right;
       }
     }
 
@@ -100,6 +117,7 @@
       &:nth-child(2),
       &:nth-child(5) {
         margin-left: 0;
+        clear: left;
       }
     }
 
